--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -2,7 +2,10 @@ absl-py==2.3.0
 astunparse==1.6.3
 certifi==2025.4.26
 charset-normalizer==3.4.2
+contourpy==1.3.2
+cycler==0.12.1
 flatbuffers==25.2.10
+fonttools==4.58.2
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.72.1
@@ -10,10 +13,12 @@ h5py==3.13.0
 idna==3.10
 joblib==1.5.1
 keras==3.10.0
+kiwisolver==1.4.8
 libclang==18.1.1
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 mdurl==0.1.2
 ml_dtypes==0.5.1
 namex==0.1.0
@@ -21,9 +26,12 @@ numpy==2.1.3
 opt_einsum==3.4.0
 optree==0.16.0
 packaging==25.0
+pandas==2.3.0
+pillow==11.2.1
 protobuf==5.29.5
 pycocotools==2.0.9
 Pygments==2.19.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.3
