--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.2",
+    "d3": "^7.9.0",
+    "primevue": "^4.3.5",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.3.5",
     "@vitejs/plugin-vue": "^5.2.3",
+    "unplugin-vue-components": "^28.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
