--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.1.2",
+    "@vueuse/core": "^13.5.0",
     "axios": "^1.10.0",
     "d3": "^7.9.0",
     "primevue": "^4.3.5",
